Ny version utan tracking

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 <body>
     <div id='map'></div>
     <div class="btns">
-        <input type="button" class="btn" value="Track" id="onoff" onclick = "toggle_tracker()">
         <input type="button" class="btn" value="Logg" onclick = "log_position()">
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
 
 </body>
 </html>
